<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.14">
  <POU Name="PRG_LVCP2_Group1" Id="{26b19a66-5540-4473-a1ec-1d7907b272ab}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_LVCP2_Group1
VAR
    // Function Block Instance
    fbContactor: FB_ContactorControl;

    // Contactor 1 IO Structure  
    stContactor_IO: ST_ContactorIO;
    
    // Başlangıç konfigürasyonu için flag
    bContactorInitDone: BOOL := FALSE;
    bCapacitorInitDone: BOOL := FALSE;	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[

	M_Contactor();
	
	M_Capacitor();
]]></ST>
    </Implementation>
    <Method Name="M_Capacitor" Id="{5970d52c-71a9-48df-9c60-174a33aceb2a}">
      <Declaration><![CDATA[METHOD M_Capacitor : BOOL
VAR
    nGroupIndex : INT;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[	nGroupIndex := 0;  // Grup 1 için index
	
	IF NOT bCapacitorInitDone THEN
	
		// Grup 1 değerlerini ata
		GVL_LVCP2.astCompensationGroups[nGroupIndex].rPower := 25.0;
		GVL_LVCP2.astCompensationGroups[nGroupIndex].rVoltage := 450.0;
		GVL_LVCP2.astCompensationGroups[nGroupIndex].nQuantity := 10;
		GVL_LVCP2.astCompensationGroups[nGroupIndex].sTagPrefix := '+EP7-16C1';
		GVL_LVCP2.astCompensationGroups[nGroupIndex].sProductCode := 'ENT.CXD-450-25';
		
		bCapacitorInitDone := TRUE;
	END_IF
	
	// Grup 1 aktif durumu
	GVL_LVCP2.abGroupActive[nGroupIndex] := stContactor_IO.bFeedback;
	
	M_Capacitor := TRUE;]]></ST>
      </Implementation>
    </Method>
    <Method Name="M_Contactor" Id="{4fc9ee90-b3db-46ac-a2a6-741f2125c9d4}">
      <Declaration><![CDATA[METHOD M_Contactor : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF NOT bContactorInitDone THEN
    // Konfigürasyon parametreleri
    GVL_LVCP2.stGroup1_ContactorHMI.stConfig.sProjectCode := '+EP7-17K1';
    GVL_LVCP2.stGroup1_ContactorHMI.stConfig.sProductCode := 'ABB-1SFL637001R7011';
    GVL_LVCP2.stGroup1_ContactorHMI.stConfig.rRatedCurrent := 630.0;
    GVL_LVCP2.stGroup1_ContactorHMI.stConfig.rRatedVoltage := 1000.0;
    GVL_LVCP2.stGroup1_ContactorHMI.stConfig.nPhaseCount := 3;
    GVL_LVCP2.stGroup1_ContactorHMI.stConfig.tFeedbackDelay := T#500MS;
    GVL_LVCP2.stGroup1_ContactorHMI.stConfig.tWeldedDelay := T#2S;
    GVL_LVCP2.stGroup1_ContactorHMI.stConfig.dwOperationLimit := 100000;
    GVL_LVCP2.stGroup1_ContactorHMI.stConfig.bFeedbackRequired := FALSE;
    // Başlangıç bakım sayacı
    GVL_LVCP2.stGroup1_ContactorHMI.stStatistics.dwRemainingOperations := GVL_LVCP2.stGroup1_ContactorHMI.stConfig.dwOperationLimit;
	
	bContactorInitDone := TRUE;
END_IF	
	
// Function Block Çağrısı
fbContactor(
    // Fiziksel Girişler
    bFeedback 		:= stContactor_IO.bFeedback,
    bPLCControl 	:= stContactor_IO.bPLCControl,
    
    // Güvenlik Girişleri
    bSafetyLoop 	:= GVL_Alarm.bSafetyLoop,
    bInterlock 		:= FALSE,
    
    // Sistem Girişleri
    bMasterReset 	:= GVL_Alarm.bMasterReset,
    
    // HMI Bağlantısı
    stHMI 			:= GVL_LVCP2.stGroup1_ContactorHMI,
    
    // Fiziksel Çıkış
    bOutput 		=> stContactor_IO.bOutput
);

// SQL Kayıt İşlemi
IF GVL_LVCP2.stGroup1_ContactorHMI.stStatistics.bNewOperationFlag THEN
    // SQL kayıt fonksiyonunu çağır
    GVL_LVCP2.stGroup1_ContactorHMI.stStatistics.bNewOperationFlag := FALSE;
END_IF	]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="PRG_LVCP2_Group1">
      <LineId Id="14" Count="0" />
      <LineId Id="63" Count="0" />
      <LineId Id="15" Count="0" />
      <LineId Id="64" Count="1" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="PRG_LVCP2_Group1.M_Capacitor">
      <LineId Id="51" Count="1" />
      <LineId Id="32" Count="0" />
      <LineId Id="34" Count="6" />
      <LineId Id="45" Count="1" />
      <LineId Id="41" Count="0" />
      <LineId Id="48" Count="0" />
      <LineId Id="50" Count="0" />
      <LineId Id="49" Count="0" />
      <LineId Id="47" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="PRG_LVCP2_Group1.M_Contactor">
      <LineId Id="6" Count="11" />
      <LineId Id="5" Count="0" />
      <LineId Id="48" Count="1" />
      <LineId Id="21" Count="1" />
      <LineId Id="24" Count="23" />
      <LineId Id="23" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>