<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.14">
  <POU Name="PRG_LVCP2_Group2" Id="{35cb5b98-3c57-40d2-a1d2-5708bea5009b}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_LVCP2_Group2
VAR
    // Function Block Instance
    fbContactor: FB_ContactorControl;

    // Contactor 1 IO Structure  
    stContactor_IO: ST_ContactorIO;
    
    // Başlangıç konfigürasyonu için flag
    bContactorInitDone: BOOL := FALSE;
    bCapacitorInitDone: BOOL := FALSE;	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[

	M_Contactor();
	
	M_Capacitor();
]]></ST>
    </Implementation>
    <Method Name="M_Capacitor" Id="{d4ae8fb9-2e59-4bf9-827e-fc570df6c575}">
      <Declaration><![CDATA[METHOD M_Capacitor : BOOL
VAR
    nGroupIndex : INT;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[
nGroupIndex := 1;  // Grup 2 için index

IF NOT bCapacitorInitDone THEN
    // Grup 2 değerlerini ata
    GVL_LVCP2.astCompensationGroups[nGroupIndex].rPower := 25.0;
    GVL_LVCP2.astCompensationGroups[nGroupIndex].rVoltage := 450.0;
    GVL_LVCP2.astCompensationGroups[nGroupIndex].nQuantity := 8;
    GVL_LVCP2.astCompensationGroups[nGroupIndex].sTagPrefix := '+EP7-19C1';
    GVL_LVCP2.astCompensationGroups[nGroupIndex].sProductCode := 'ENT.CXD-450-25';
    
    bCapacitorInitDone := TRUE;
END_IF

// Grup 2 aktif durumu
GVL_LVCP2.abGroupActive[nGroupIndex] := stContactor_IO.bFeedback;

M_Capacitor := TRUE;]]></ST>
      </Implementation>
    </Method>
    <Method Name="M_Contactor" Id="{8cba91c7-a708-41f2-98ea-e18a4ed598fc}">
      <Declaration><![CDATA[METHOD M_Contactor : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
IF NOT bContactorInitDone THEN
    // Konfigürasyon parametreleri
    GVL_LVCP2.stGroup2_ContactorHMI.stConfig.sProjectCode := '+EP7-20K1';
    GVL_LVCP2.stGroup2_ContactorHMI.stConfig.sProductCode := 'ABB-1SFL597001R7011';
    GVL_LVCP2.stGroup2_ContactorHMI.stConfig.rRatedCurrent := 500.0;
    GVL_LVCP2.stGroup2_ContactorHMI.stConfig.rRatedVoltage := 1000.0;
    GVL_LVCP2.stGroup2_ContactorHMI.stConfig.nPhaseCount := 3;
    GVL_LVCP2.stGroup2_ContactorHMI.stConfig.tFeedbackDelay := T#500MS;
    GVL_LVCP2.stGroup2_ContactorHMI.stConfig.tWeldedDelay := T#2S;
    GVL_LVCP2.stGroup2_ContactorHMI.stConfig.dwOperationLimit := 100000;
    
    // Başlangıç bakım sayacı
    GVL_LVCP2.stGroup2_ContactorHMI.stStatistics.dwRemainingOperations := GVL_LVCP2.stGroup2_ContactorHMI.stConfig.dwOperationLimit;
    
    bContactorInitDone := TRUE;
END_IF

// Function Block Çağrısı
fbContactor(
    // Fiziksel Girişler
    bFeedback := stContactor_IO.bFeedback,
    bPLCControl := stContactor_IO.bPLCControl,
    
    // Güvenlik Girişleri
    bSafetyLoop := GVL_Alarm.bSafetyLoop,
    bInterlock := FALSE,
    
    // Sistem Girişleri
    bMasterReset := GVL_Alarm.bMasterReset,
    
    // HMI Bağlantısı
    stHMI := GVL_LVCP2.stGroup2_ContactorHMI,
    
    // Fiziksel Çıkış
    bOutput => stContactor_IO.bOutput
);

M_Contactor := TRUE;]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="PRG_LVCP2_Group2">
      <LineId Id="6" Count="4" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="PRG_LVCP2_Group2.M_Capacitor">
      <LineId Id="10" Count="16" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="PRG_LVCP2_Group2.M_Contactor">
      <LineId Id="7" Count="37" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>