<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.14">
  <POU Name="PRG_LVCP2_Group5" Id="{36525102-ad68-4a87-88e5-6d89d3e264ad}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_LVCP2_Group5
VAR
    // Function Block Instance
    fbContactor: FB_ContactorControl;

    // Contactor 1 IO Structure  
    stContactor_IO: ST_ContactorIO;
    
    // Başlangıç konfigürasyonu için flag
    bContactorInitDone: BOOL := FALSE;
    bCapacitorInitDone: BOOL := FALSE;	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[

	M_Contactor();
	
	M_Capacitor();]]></ST>
    </Implementation>
    <Method Name="M_Capacitor" Id="{3021828f-b141-4e77-8e67-897923c6504d}">
      <Declaration><![CDATA[METHOD M_Capacitor : BOOL
VAR
    nGroupIndex : INT;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[
nGroupIndex := 4;  // Grup 5 için index

IF NOT bCapacitorInitDone THEN
    // Grup 5 değerlerini ata
    GVL_LVCP2.astCompensationGroups[nGroupIndex].rPower := 25.0;
    GVL_LVCP2.astCompensationGroups[nGroupIndex].rVoltage := 450.0;
    GVL_LVCP2.astCompensationGroups[nGroupIndex].nQuantity := 4;
    GVL_LVCP2.astCompensationGroups[nGroupIndex].sTagPrefix := '+EP7-28C1';
    GVL_LVCP2.astCompensationGroups[nGroupIndex].sProductCode := 'ENT.CXD-450-25';
    
    bCapacitorInitDone := TRUE;
END_IF

// Grup 5 aktif durumu
GVL_LVCP2.abGroupActive[nGroupIndex] := stContactor_IO.bFeedback;

M_Capacitor := TRUE;]]></ST>
      </Implementation>
    </Method>
    <Method Name="M_Contactor" Id="{24db2572-9e74-4d1b-9b82-08ced7e22e88}">
      <Declaration><![CDATA[METHOD M_Contactor : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF NOT bContactorInitDone THEN
    // Konfigürasyon parametreleri
    GVL_LVCP2.stGroup5_ContactorHMI.stConfig.sProjectCode := '+EP7-29K1';
    GVL_LVCP2.stGroup5_ContactorHMI.stConfig.sProductCode := 'ABB 1SFL547002R1311';
    GVL_LVCP2.stGroup5_ContactorHMI.stConfig.rRatedCurrent := 265.0;
    GVL_LVCP2.stGroup5_ContactorHMI.stConfig.rRatedVoltage := 1000.0;
    GVL_LVCP2.stGroup5_ContactorHMI.stConfig.nPhaseCount := 3;
    GVL_LVCP2.stGroup5_ContactorHMI.stConfig.tFeedbackDelay := T#500MS;
    GVL_LVCP2.stGroup5_ContactorHMI.stConfig.tWeldedDelay := T#2S;
    GVL_LVCP2.stGroup5_ContactorHMI.stConfig.dwOperationLimit := 100000;
    
    // Başlangıç bakım sayacı
    GVL_LVCP2.stGroup5_ContactorHMI.stStatistics.dwRemainingOperations := GVL_LVCP2.stGroup5_ContactorHMI.stConfig.dwOperationLimit;
    
    bContactorInitDone := TRUE;
END_IF

// Function Block Çağrısı
fbContactor(
    // Fiziksel Girişler
    bFeedback := stContactor_IO.bFeedback,
    bPLCControl := stContactor_IO.bPLCControl,
    
    // Güvenlik Girişleri
    bSafetyLoop := GVL_Alarm.bSafetyLoop,
    bInterlock := FALSE,
    
    // Sistem Girişleri
    bMasterReset := GVL_Alarm.bMasterReset,
    
    // HMI Bağlantısı
    stHMI := GVL_LVCP2.stGroup5_ContactorHMI,
    
    // Fiziksel Çıkış
    bOutput => stContactor_IO.bOutput
);

M_Contactor := TRUE;]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="PRG_LVCP2_Group5">
      <LineId Id="18" Count="3" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="PRG_LVCP2_Group5.M_Capacitor">
      <LineId Id="13" Count="16" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="PRG_LVCP2_Group5.M_Contactor">
      <LineId Id="8" Count="36" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>