<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <POU Name="PRG_LVCP5_Group2" Id="{8723af1b-bb87-4b49-9b82-8be4b090ff9a}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_LVCP5_Group2
VAR
    // Function Block Instance
    fbContactor: FB_ContactorControl;

    // Contactor 1 IO Structure  
    stContactor_IO: ST_ContactorIO;
    
    // Başlangıç konfigürasyonu için flag
    bContactorInitDone: BOOL := FALSE;
    bCapacitorInitDone: BOOL := FALSE;	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[

	M_Contactor();
	
	M_Capacitor();
]]></ST>
    </Implementation>
    <Method Name="M_Capacitor" Id="{8a04e0ea-7e87-4f38-b1ff-a962ff2e88d7}">
      <Declaration><![CDATA[METHOD M_Capacitor : BOOL
VAR
    nGroupIndex : INT;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[
nGroupIndex := 1;  // Grup 2 için index

IF NOT bCapacitorInitDone THEN
    // Grup 2 değerlerini ata
    GVL_LVCP5.astCompensationGroups[nGroupIndex].rPower := 10.0;
    GVL_LVCP5.astCompensationGroups[nGroupIndex].rVoltage := 450.0;
    GVL_LVCP5.astCompensationGroups[nGroupIndex].nQuantity := 9;
    GVL_LVCP5.astCompensationGroups[nGroupIndex].sTagPrefix := '+EP8-19C1';
    GVL_LVCP5.astCompensationGroups[nGroupIndex].sProductCode := 'ENT.CXD-450-10';
    
    bCapacitorInitDone := TRUE;
END_IF

// Grup 2 aktif durumu
GVL_LVCP5.abGroupActive[nGroupIndex] := stContactor_IO.bFeedback;

M_Capacitor := TRUE;]]></ST>
      </Implementation>
    </Method>
    <Method Name="M_Contactor" Id="{690a8a6d-a152-4aed-83c8-e635cc3296ab}">
      <Declaration><![CDATA[METHOD M_Contactor : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
IF NOT bContactorInitDone THEN
    // Konfigürasyon parametreleri
    GVL_LVCP5.stGroup2_ContactorHMI.stConfig.sProjectCode := '+EP6-20K1';
    GVL_LVCP5.stGroup2_ContactorHMI.stConfig.sProductCode := 'SCH LC1G500LSEA';
    GVL_LVCP5.stGroup2_ContactorHMI.stConfig.rRatedCurrent := 500.0;
    GVL_LVCP5.stGroup2_ContactorHMI.stConfig.rRatedVoltage := 1000.0;
    GVL_LVCP5.stGroup2_ContactorHMI.stConfig.nPhaseCount := 3;
    GVL_LVCP5.stGroup2_ContactorHMI.stConfig.tFeedbackDelay := T#500MS;
    GVL_LVCP5.stGroup2_ContactorHMI.stConfig.tWeldedDelay := T#2S;
    GVL_LVCP5.stGroup2_ContactorHMI.stConfig.dwOperationLimit := 100000;
    
    // Başlangıç bakım sayacı
    GVL_LVCP5.stGroup2_ContactorHMI.stStatistics.dwRemainingOperations := GVL_LVCP5.stGroup2_ContactorHMI.stConfig.dwOperationLimit;
    
    bContactorInitDone := TRUE;
END_IF

// Function Block Çağrısı
fbContactor(
    // Fiziksel Girişler
    bFeedback 		:= stContactor_IO.bFeedback,
    bPLCControl 	:= stContactor_IO.bPLCControl,
    
    // Güvenlik Girişleri
    bSafetyLoop 	:= GVL_Alarm.bSafetyLoop,
    bInterlock 		:= FALSE,
    
    // Sistem Girişleri
    bMasterReset 	:= GVL_Alarm.bMasterReset,
    
    // HMI Bağlantısı
    stHMI 			:= GVL_LVCP5.stGroup2_ContactorHMI,
    
    // Fiziksel Çıkış
    bOutput 		=> stContactor_IO.bOutput
);

M_Contactor := TRUE;]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="PRG_LVCP5_Group2">
      <LineId Id="6" Count="4" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="PRG_LVCP5_Group2.M_Capacitor">
      <LineId Id="10" Count="16" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="PRG_LVCP5_Group2.M_Contactor">
      <LineId Id="7" Count="37" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>