<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <POU Name="PRG_LVCP5_Group4" Id="{5930a225-73aa-4d14-9c3d-60a942f24a48}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_LVCP5_Group4
VAR
    // Function Block Instance
    fbContactor: FB_ContactorControl;

    // Contactor 1 IO Structure  
    stContactor_IO: ST_ContactorIO;
    
    // Başlangıç konfigürasyonu için flag
    bContactorInitDone: BOOL := FALSE;
    bCapacitorInitDone: BOOL := FALSE;	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[

	M_Contactor();
	
	M_Capacitor();]]></ST>
    </Implementation>
    <Method Name="M_Capacitor" Id="{6f205962-905f-4970-8297-e2391874f906}">
      <Declaration><![CDATA[METHOD M_Capacitor : BOOL
VAR
    nGroupIndex : INT;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
nGroupIndex := 3;  // Grup 4 için index

IF NOT bCapacitorInitDone THEN
    // Grup 4 değerlerini ata
    GVL_LVCP5.astCompensationGroups[nGroupIndex].rPower := 10.0;
    GVL_LVCP5.astCompensationGroups[nGroupIndex].rVoltage := 450.0;
    GVL_LVCP5.astCompensationGroups[nGroupIndex].nQuantity := 7;
    GVL_LVCP5.astCompensationGroups[nGroupIndex].sTagPrefix := '+EP8-25C1';
    GVL_LVCP5.astCompensationGroups[nGroupIndex].sProductCode := 'ENT.CXD-450-10';
    
    bCapacitorInitDone := TRUE;
END_IF

// Grup 4 aktif durumu
GVL_LVCP5.abGroupActive[nGroupIndex] := stContactor_IO.bFeedback;

M_Capacitor := TRUE;]]></ST>
      </Implementation>
    </Method>
    <Method Name="M_Contactor" Id="{9434f3e9-dd67-4030-ab53-dce1922819e4}">
      <Declaration><![CDATA[METHOD M_Contactor : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF NOT bContactorInitDone THEN
    // Konfigürasyon parametreleri
    GVL_LVCP5.stGroup4_ContactorHMI.stConfig.sProjectCode := '+EP8-26K1';
    GVL_LVCP5.stGroup4_ContactorHMI.stConfig.sProductCode := 'SCH LC1G150LSEA';
    GVL_LVCP5.stGroup4_ContactorHMI.stConfig.rRatedCurrent := 150.0;
    GVL_LVCP5.stGroup4_ContactorHMI.stConfig.rRatedVoltage := 1000.0;
    GVL_LVCP5.stGroup4_ContactorHMI.stConfig.nPhaseCount := 3;
    GVL_LVCP5.stGroup4_ContactorHMI.stConfig.tFeedbackDelay := T#500MS;
    GVL_LVCP5.stGroup4_ContactorHMI.stConfig.tWeldedDelay := T#2S;
    GVL_LVCP5.stGroup4_ContactorHMI.stConfig.dwOperationLimit := 100000;
    
    // Başlangıç bakım sayacı
    GVL_LVCP5.stGroup4_ContactorHMI.stStatistics.dwRemainingOperations := GVL_LVCP5.stGroup4_ContactorHMI.stConfig.dwOperationLimit;
    
    bContactorInitDone := TRUE;
END_IF

// Function Block Çağrısı
fbContactor(
    // Fiziksel Girişler
    bFeedback 		:= stContactor_IO.bFeedback,
    bPLCControl 	:= stContactor_IO.bPLCControl,
    
    // Güvenlik Girişleri
    bSafetyLoop 	:= GVL_Alarm.bSafetyLoop,
    bInterlock 		:= FALSE,
    
    // Sistem Girişleri
    bMasterReset 	:= GVL_Alarm.bMasterReset,
    
    // HMI Bağlantısı
    stHMI 			:= GVL_LVCP5.stGroup4_ContactorHMI,
    
    // Fiziksel Çıkış
    bOutput 		=> stContactor_IO.bOutput
);

M_Contactor := TRUE;]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="PRG_LVCP5_Group4">
      <LineId Id="18" Count="3" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="PRG_LVCP5_Group4.M_Capacitor">
      <LineId Id="10" Count="16" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="PRG_LVCP5_Group4.M_Contactor">
      <LineId Id="8" Count="36" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>