<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <POU Name="PRG_LVCP5_Group5" Id="{7582d22e-2c8d-4f9b-b379-37f5ffbd5256}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_LVCP5_Group5
VAR
    // Function Block Instance
    fbContactor: FB_ContactorControl;

    // Contactor 1 IO Structure  
    stContactor_IO: ST_ContactorIO;
    
    // Başlangıç konfigürasyonu için flag
    bContactorInitDone: BOOL := FALSE;
    bCapacitorInitDone: BOOL := FALSE;	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[

	M_Contactor();
	
	M_Capacitor();]]></ST>
    </Implementation>
    <Method Name="M_Capacitor" Id="{1c5ef3c2-f41f-4785-aa88-bdf476ad1023}">
      <Declaration><![CDATA[METHOD M_Capacitor : BOOL
VAR
    nGroupIndex : INT;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[
nGroupIndex := 4;  // Grup 5 için index

IF NOT bCapacitorInitDone THEN
    // Grup 5 değerlerini ata
    GVL_LVCP5.astCompensationGroups[nGroupIndex].rPower := 10.0;
    GVL_LVCP5.astCompensationGroups[nGroupIndex].rVoltage := 450.0;
    GVL_LVCP5.astCompensationGroups[nGroupIndex].nQuantity := 3;
    GVL_LVCP5.astCompensationGroups[nGroupIndex].sTagPrefix := '+EP8-28C1';
    GVL_LVCP5.astCompensationGroups[nGroupIndex].sProductCode := 'ENT.CXD-450-10';
    
    bCapacitorInitDone := TRUE;
END_IF

// Grup 5 aktif durumu
GVL_LVCP5.abGroupActive[nGroupIndex] := stContactor_IO.bFeedback;

M_Capacitor := TRUE;]]></ST>
      </Implementation>
    </Method>
    <Method Name="M_Contactor" Id="{2a27e9a7-ea6c-4f6e-b42a-f1e55cc0aac8}">
      <Declaration><![CDATA[METHOD M_Contactor : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF NOT bContactorInitDone THEN
    // Konfigürasyon parametreleri
    GVL_LVCP5.stGroup5_ContactorHMI.stConfig.sProjectCode := '+EP8-29K1';
    GVL_LVCP5.stGroup5_ContactorHMI.stConfig.sProductCode := 'SCH LC1D40A3P7';
    GVL_LVCP5.stGroup5_ContactorHMI.stConfig.rRatedCurrent := 40.0;
    GVL_LVCP5.stGroup5_ContactorHMI.stConfig.rRatedVoltage := 690.0;
    GVL_LVCP5.stGroup5_ContactorHMI.stConfig.nPhaseCount := 3;
    GVL_LVCP5.stGroup5_ContactorHMI.stConfig.tFeedbackDelay := T#500MS;
    GVL_LVCP5.stGroup5_ContactorHMI.stConfig.tWeldedDelay := T#2S;
    GVL_LVCP5.stGroup5_ContactorHMI.stConfig.dwOperationLimit := 100000;
    
    // Başlangıç bakım sayacı
    GVL_LVCP5.stGroup5_ContactorHMI.stStatistics.dwRemainingOperations := GVL_LVCP5.stGroup5_ContactorHMI.stConfig.dwOperationLimit;
    
    bContactorInitDone := TRUE;
END_IF

// Function Block Çağrısı
fbContactor(
    // Fiziksel Girişler
    bFeedback 		:= stContactor_IO.bFeedback,
    bPLCControl 	:= stContactor_IO.bPLCControl,
    
    // Güvenlik Girişleri
    bSafetyLoop 	:= GVL_Alarm.bSafetyLoop,
    bInterlock 		:= FALSE,
    
    // Sistem Girişleri
    bMasterReset 	:= GVL_Alarm.bMasterReset,
    
    // HMI Bağlantısı
    stHMI 			:= GVL_LVCP5.stGroup5_ContactorHMI,
    
    // Fiziksel Çıkış
    bOutput 		=> stContactor_IO.bOutput
);

M_Contactor := TRUE;]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="PRG_LVCP5_Group5">
      <LineId Id="18" Count="3" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="PRG_LVCP5_Group5.M_Capacitor">
      <LineId Id="13" Count="16" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="PRG_LVCP5_Group5.M_Contactor">
      <LineId Id="8" Count="36" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>