<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <POU Name="PRG_LVCP5_Group7" Id="{7de6254b-9650-411b-bc9f-8aba1cf2f0fb}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_LVCP5_Group7
VAR
    // Function Block Instance
    fbContactor: FB_ContactorControl;

    // Contactor 1 IO Structure  
    stContactor_IO: ST_ContactorIO;
    
    // Başlangıç konfigürasyonu için flag
    bContactorInitDone: BOOL := FALSE;
    bCapacitorInitDone: BOOL := FALSE;	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[

	M_Contactor();
	
	M_Capacitor();]]></ST>
    </Implementation>
    <Method Name="M_Capacitor" Id="{b1e367fb-e1d0-49b4-8dc0-16e26c3b11ef}">
      <Declaration><![CDATA[METHOD M_Capacitor : BOOL
VAR
    nGroupIndex : INT;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[
nGroupIndex := 6;  // Grup 7 için index

IF NOT bCapacitorInitDone THEN
    // Grup 7 değerlerini ata
    GVL_LVCP5.astCompensationGroups[nGroupIndex].rPower := 10.0;
    GVL_LVCP5.astCompensationGroups[nGroupIndex].rVoltage := 450.0;
    GVL_LVCP5.astCompensationGroups[nGroupIndex].nQuantity := 1;
    GVL_LVCP5.astCompensationGroups[nGroupIndex].sTagPrefix := '+EP8-34C1';
    GVL_LVCP5.astCompensationGroups[nGroupIndex].sProductCode := 'ENT.CXD-450-10';
    
    bCapacitorInitDone := TRUE;
END_IF

// Grup 7 aktif durumu
GVL_LVCP5.abGroupActive[nGroupIndex] := stContactor_IO.bFeedback;

M_Capacitor := TRUE;]]></ST>
      </Implementation>
    </Method>
    <Method Name="M_Contactor" Id="{0a56df43-f4df-451a-ac18-2d0f8ed590bf}">
      <Declaration><![CDATA[METHOD M_Contactor : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF NOT bContactorInitDone THEN
    // Konfigürasyon parametreleri
    GVL_LVCP5.stGroup7_ContactorHMI.stConfig.sProjectCode := '+EP6-35K1';
    GVL_LVCP5.stGroup7_ContactorHMI.stConfig.sProductCode := 'SCH LC1D25P7';
    GVL_LVCP5.stGroup7_ContactorHMI.stConfig.rRatedCurrent := 25.0;
    GVL_LVCP5.stGroup7_ContactorHMI.stConfig.rRatedVoltage := 690.0;
    GVL_LVCP5.stGroup7_ContactorHMI.stConfig.nPhaseCount := 3;
    GVL_LVCP5.stGroup7_ContactorHMI.stConfig.tFeedbackDelay := T#500MS;
    GVL_LVCP5.stGroup7_ContactorHMI.stConfig.tWeldedDelay := T#2S;
    GVL_LVCP5.stGroup7_ContactorHMI.stConfig.dwOperationLimit := 100000;
    
    // Başlangıç bakım sayacı
    GVL_LVCP5.stGroup7_ContactorHMI.stStatistics.dwRemainingOperations := GVL_LVCP5.stGroup7_ContactorHMI.stConfig.dwOperationLimit;
    
    bContactorInitDone := TRUE;
END_IF

// Function Block Çağrısı
fbContactor(
    // Fiziksel Girişler
    bFeedback 		:= stContactor_IO.bFeedback,
    bPLCControl 	:= stContactor_IO.bPLCControl,
    
    // Güvenlik Girişleri
    bSafetyLoop 	:= GVL_Alarm.bSafetyLoop,
    bInterlock 		:= FALSE,
    
    // Sistem Girişleri
    bMasterReset 	:= GVL_Alarm.bMasterReset,
    
    // HMI Bağlantısı
    stHMI 			:= GVL_LVCP5.stGroup7_ContactorHMI,
    
    // Fiziksel Çıkış
    bOutput 		=> stContactor_IO.bOutput
);

M_Contactor := TRUE;]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="PRG_LVCP5_Group7">
      <LineId Id="18" Count="3" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="PRG_LVCP5_Group7.M_Capacitor">
      <LineId Id="9" Count="16" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="PRG_LVCP5_Group7.M_Contactor">
      <LineId Id="9" Count="36" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>